--- a/index.css
+++ b/index.css
@@ -26,12 +26,9 @@
 
 /* 2. Set font and remove the margin of the whole webpage */
 /* TODO 8: Assign a selector to provide basic styles to all elements */
-/*selector*/ {
+* {
     font-family: monospace;
-
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 /* 3. Webpage padding */
